--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,46 +1,70 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                tools:context=".MainActivity"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+    tools:context=".MainActivity"
                 android:orientation="vertical">
 
+    <ImageView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/ecigarrete"
+        android:cropToPadding="false"
+        android:scaleType="centerCrop"
+        android:src="@drawable/epapturned_off"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true" />
+
     <FrameLayout
-        android:id="@+id/debugFrame"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="7"
-        android:layout_margin="0dp"
-        android:padding="0dp">
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true">
 
-        <TextView
-            android:id="@+id/debugTextView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
-            android:gravity="center"
-            android:visibility="gone"/>
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
 
-        <Button
-            android:id="@+id/debugButton"
-            android:text="@string/press_me"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:visibility="gone"/>
+            <FrameLayout
+                android:id="@+id/debugFrame"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="7"
+                android:layout_margin="0dp"
+                android:padding="0dp">
 
-        </FrameLayout>
+                <TextView
+                    android:id="@+id/debugTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
+                    android:gravity="center"
+                    android:visibility="gone"/>
 
-    <Button
-        android:text="@string/start_bluetooth_text"
-        android:id="@+id/btnStartBluetooth"
-        android:layout_height="0dp"
-        android:layout_width="match_parent"
-        android:layout_weight="1"
-        android:onClick="startBluetooth"/>
+                <Button
+                    android:id="@+id/debugButton"
+                    android:text="@string/press_me"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:visibility="gone"/>
+
+            </FrameLayout>
+
+            <Button
+                android:text="@string/start_bluetooth_text"
+                android:id="@+id/btnStartBluetooth"
+                android:layout_height="0dp"
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:onClick="startBluetooth"/>
+        </LinearLayout>
+
+    </FrameLayout>
 
 
-</LinearLayout>
+</RelativeLayout>
