--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,8 @@
             android:orientation="vertical"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:gravity="center_vertical">
 
             <TextView
                 android:layout_width="fill_parent"
@@ -32,7 +33,8 @@
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="0"
                 android:gravity="center"
-                android:id="@+id/click_count" />
+                android:id="@+id/click_count"
+                android:layout_gravity="center" />
 
         </LinearLayout>
 
@@ -40,7 +42,8 @@
             android:orientation="vertical"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:gravity="center_vertical">
 
             <TextView
                 android:layout_width="fill_parent"
@@ -58,7 +61,8 @@
                 android:text="0 s"
                 android:id="@+id/seconds_count"
                 android:gravity="center"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:layout_gravity="center" />
         </LinearLayout>
 
     </LinearLayout>
@@ -81,7 +85,9 @@
             android:orientation="vertical"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:gravity="center_vertical">
 
             <TextView
                 android:layout_width="fill_parent"
@@ -97,7 +103,8 @@
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="0"
                 android:gravity="center"
-                android:id="@+id/nicotine_amount" />
+                android:id="@+id/nicotine_amount"
+                android:layout_gravity="center" />
 
         </LinearLayout>
 
@@ -105,7 +112,9 @@
             android:orientation="vertical"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:gravity="center_vertical">
 
             <TextView
                 android:layout_width="fill_parent"
@@ -123,7 +132,8 @@
                 android:text="0 s"
                 android:id="@+id/cigarets_equivalent"
                 android:gravity="center"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:layout_gravity="center" />
         </LinearLayout>
 
     </LinearLayout>
